# Google-Calendar-Analytics

./: .env.example  .gitignore  404.html  LICENSE  Makefile  README.md  dev.requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/workflow/: python.yml
.github/workflows/: python.yml
Credentials/: index.html
Customization/: index.html
Getting-started/: index.html
Index/: index.html
Main/: index.html
References/: index.html
docs/: Credentials.md  Customization.md  Getting-started.md  References.md  index.md
google_calendar_analytics/: __init__.py  _version.py  analytics.py
google_calendar_analytics/authentication/: auth.py
google_calendar_analytics/collecting/: collector.py
google_calendar_analytics/core/: exceptions.py
google_calendar_analytics/data_collecting/: collector.py
google_calendar_analytics/processing/: transformer.py
google_calendar_analytics/visualization/: image_saver.py  visual_design.py  visualizer_factory.py
search/: search_index.json
src/: main.py
src/authentication/: auth.py
src/core/: config.py
src/data_collecting/: collector.py
src/data_processing/: transformer.py
src/visualization/: image_saver.py  visualizer.py  visualizer_factory.py
tests/functional/src/: __init__.py
tests/functional/src/data_collecting/: collector.py  test_collector.py
tests/functional/src/data_processing/: test_transformer.py
tests/functional/src/visualization/: test_visualizer_factory.py
